kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: YOUR_DEPLOYMENT_NAME
  labels:
    app: LABEL_OF_DEPLOYMENT_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: LABEL_OF_POD_NAME
  template:
    metadata:
      labels:
        app: LABEL_OF_POD_NAME
    spec:
      containers:
        - name: YOUR_CONTAINER_NAME
          image: YOUR_DOCKERHUB_IMAGE
          ports:
            - name: YOUR_PORT_NAME
              containerPort: YOUR_PORT
