kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: YOUR_SERVICE_NAME
spec:
  selector:
    app: LABEL_OF_DEPLOYMENT_NAME
  ports:
    - port: YOUR_PORT
      targetPort: YOUR_PORT_NAME
      protocol: TCP
  type: ClusterIP
