kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: YOUR_INGRESS_NAME
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: YOUR_INGRESS_CLASS_NAME
  rules:
    - host: www.your-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: YOUR_SERVICE_NAME
                port:
                  number: YOUR_PORT
